# PureCNN

./: README.md  main.py  pyproject.toml
cnn/: func.py  net.py
